@@ -115,6 +115,72 @@ extern fiid_template_t tmpl_get_lan_conf_param_gw_mac_addr_rs;
 extern fiid_template_t tmpl_get_lan_conf_param_vlan_id_rs;
 extern fiid_template_t tmpl_get_lan_conf_param_vlan_priority_rs;
 
+int8_t fill_lan_set_arp (uint8_t channel_number,
+                         uint8_t bmc_generated_gratuitous_arps_flag,
+                         uint8_t bmc_generated_arp_responses_flag,
+                         fiid_obj_t obj_data_rq);
+int8_t fill_lan_set_gratuitous_arp_interval (uint8_t channel_number,
+                                             uint8_t gratuitous_arp_interval,
+                                             fiid_obj_t obj_data_rq);
+int8_t fill_lan_set_auth_type_enables (uint8_t channel_number,
+                                       int8_t auth_type_callback_none,
+                                       int8_t auth_type_callback_md2,
+                                       int8_t auth_type_callback_md5,
+                                       int8_t auth_type_callback_straight_password,
+                                       int8_t auth_type_callback_oem_proprietary,
+                                       int8_t auth_type_user_none,
+                                       int8_t auth_type_user_md2,
+                                       int8_t auth_type_user_md5,
+                                       int8_t auth_type_user_straight_password,
+                                       int8_t auth_type_user_oem_proprietary,
+                                       int8_t auth_type_operator_none,
+                                       int8_t auth_type_operator_md2,
+                                       int8_t auth_type_operator_md5,
+                                       int8_t auth_type_operator_straight_password,
+                                       int8_t auth_type_operator_oem_proprietary,
+                                       int8_t auth_type_admin_none,
+                                       int8_t auth_type_admin_md2,
+                                       int8_t auth_type_admin_md5,
+                                       int8_t auth_type_admin_straight_password,
+                                       int8_t auth_type_admin_oem_proprietary,
+                                       int8_t auth_type_oem_none,
+                                       int8_t auth_type_oem_md2,
+                                       int8_t auth_type_oem_md5,
+                                       int8_t auth_type_oem_straight_password,
+                                       int8_t auth_type_oem_oem_proprietary,
+                                       fiid_obj_t obj_data_rq);
+int8_t fill_lan_set_ip_addr_source (uint8_t channel_number,
+                                    uint8_t ip_addr_source,
+                                    fiid_obj_t obj_data_rq);
+int8_t fill_lan_set_ip_addr (uint8_t parameter_selector,
+                             uint8_t channel_number,
+                             uint32_t ip_addr,
+                             fiid_obj_t obj_data_rq);
+int8_t fill_lan_set_vlan_id (uint8_t channel_number,
+                             uint8_t vlan_id_enable,
+                             uint32_t vlan_id,
+                             fiid_obj_t obj_data_rq);
+int8_t fill_lan_set_vlan_priority (uint8_t channel_number,
+                                   uint8_t vlan_priority,
+                                   fiid_obj_t obj_data_rq);
+int8_t fill_lan_set_subnet_mask (uint8_t channel_number,
+                                 uint32_t subnet_mask,
+                                 fiid_obj_t obj_data_rq);
+int8_t fill_lan_set_mac_addr (uint8_t parameter_selector,
+                              uint8_t channel_number,
+                              uint64_t mac_addr,
+                              fiid_obj_t obj_data_rq);
+int8_t fill_get_lan_conf_param (uint8_t parameter_selector,
+                                uint8_t channel_number,
+                                uint8_t parameter_type,
+                                uint8_t set_selector,
+                                uint8_t block_selector,
+                                fiid_obj_t obj_data_rq);
+int8_t fill_suspend_bmc_arps (uint8_t channel_number,
+                              uint8_t gratuitous_arp_suspend,
+                              uint8_t arp_response_suspend,
+                              fiid_obj_t obj_data_rq);
+
 int8_t ipmi_cmd_lan_set_arp2 (ipmi_device_t *dev, 
 			      uint8_t channel_number, 
 			      uint8_t bmc_generated_gratuitous_arps_flag, 
