@@ -18,7 +18,7 @@
    Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  
 */
 
-/* $Id: ipmi-pef-cmds.h,v 1.14 2006-02-07 17:39:47 chu11 Exp $ */
+/* $Id: ipmi-pef-cmds.h,v 1.15 2006-02-09 20:38:33 chu11 Exp $ */
 
 #ifndef _IPMI_PEF_CMDS_H
 #define _IPMI_PEF_CMDS_H
@@ -118,6 +118,56 @@ struct event_filter_table_entry
   uint8_t      event_data3_compare2;
 };
 typedef struct event_filter_table_entry event_filter_table_entry_t;
+
+int8_t fill_kcs_alert_immediate (uint8_t channel_number,
+                                 uint8_t destination_selector,
+                                 uint8_t string_selector,
+                                 uint8_t string_enable,
+                                 fiid_obj_t obj_data_rq);
+int8_t fill_kcs_get_pef_conf_param (uint8_t parameter_selector,
+                                    uint8_t parameter_type,
+                                    uint8_t set_selector,
+                                    uint8_t block_selector,
+                                    fiid_obj_t obj_data_rq);
+
+int8_t fill_kcs_set_pef_control (uint8_t enable_pef,
+                                 uint8_t enable_pef_event_msgs,
+                                 uint8_t enable_startup_delay,
+                                 uint8_t enable_alert_startup_delay,
+                                 fiid_obj_t obj_data_rq);
+int8_t fill_kcs_set_global_action_control (uint8_t enable_alert,
+                                           uint8_t enable_powerdown,
+                                           uint8_t enable_reset,
+                                           uint8_t enable_powercycle,
+                                           uint8_t enable_oem,
+                                           uint8_t enable_diag_interrupt,
+                                           fiid_obj_t obj_data_rq);
+int8_t fill_kcs_set_startup_delay (uint8_t startup_delay, fiid_obj_t obj_data_rq);
+int8_t fill_kcs_set_alert_startup_delay (uint8_t alert_startup_delay, fiid_obj_t obj_data_rq);
+int8_t fill_kcs_set_num_event_filters (uint8_t num_event_filters, fiid_obj_t obj_data_rq);
+int8_t fill_kcs_set_filter_table_entry (const event_filter_table_entry_t *eft_entry,
+                                        fiid_obj_t obj_data_rq);
+int8_t fill_kcs_set_filter_table_data1 (uint8_t filter_number,
+                                        filter_type_t filter_type,
+                                        uint8_t enabled,
+                                        fiid_obj_t obj_data_rq);
+int8_t fill_kcs_set_num_alert_policies (uint8_t num_alert_policies,
+                                        fiid_obj_t obj_data_rq);
+int8_t fill_kcs_set_alert_string_keys (uint8_t string_selector,
+                                       uint8_t filter_number,
+                                       uint8_t string_set_number,
+                                       fiid_obj_t obj_data_rq);
+int8_t fill_kcs_get_pef_caps (fiid_obj_t obj_data_rq);
+int8_t fill_kcs_arm_pef_postpone_timer (uint8_t countdown, fiid_obj_t obj_data_rq);
+int8_t fill_kcs_set_last_processed_event (which_event_t which, uint16_t id, fiid_obj_t obj_data_rq);
+int8_t fill_kcs_get_last_proessed_event (fiid_obj_t obj_data_rq);
+int8_t fill_kcs_pet_ack (uint16_t sequence_number,
+                         uint32_t timestamp,
+                         uint8_t source_type,
+                         uint8_t sensor_device,
+                         uint8_t sensor_number,
+                         uint32_t event_data,
+                         fiid_obj_t obj_data_rq);
 
 int8_t ipmi_cmd_set_pef_control2 (ipmi_device_t *dev, 
 				  uint8_t enable_pef, 
