@@ -40,6 +40,16 @@ extern fiid_template_t tmpl_set_sol_conf_param_sol_disable_rs;
 extern fiid_template_t tmpl_get_sol_conf_param_rq;
 extern fiid_template_t tmpl_get_sol_conf_param_sol_enable_rs;
 
+int8_t fill_sol_conf_sol_enable_disable (uint8_t channel_number,
+                                         uint8_t sol_payload,
+                                         fiid_obj_t obj_data_rq);
+int8_t fill_get_sol_conf_param (uint8_t parameter_selector,
+                                uint8_t channel_number,
+                                uint8_t parameter_type,
+                                uint8_t set_selector,
+                                uint8_t block_selector,
+                                fiid_obj_t obj_data_rq);
+
 int8_t ipmi_cmd_sol_conf_sol_enable_disable2 (ipmi_device_t *dev, 
 					      uint8_t channel_number, 
 					      uint8_t sol_payload, 
